--- a/src/Jili/ApiBundle/Resources/views/MarketActivity/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/MarketActivity/index.html.twig
@@ -14,17 +14,16 @@
 <script src="{{ asset('js/analytics.js')}}" type="text/javascript"></script>
 <script type="text/javascript">
 $(document).ready(function() {
-  var url = window.location.href;
-  url = url.split("marketActivity/index/");
-  if(url[1]){
-    id = url[1].split("/");
-    $('.tags a').removeClass("hover");
-    $('.btags a').removeClass("hover");
-    $('#mall'+id[0]).addClass("hover");
-    $('#cate'+id[1]).addClass("hover");
-  }
+  
  {% if aid == 0 %}
     $('#mall').addClass("hover");
+  {% else %}
+      {% if cateId == 0 %}
+            $('.tags a').removeClass("hover");
+            $('.btags a').removeClass("hover");
+            $('#mall'+{{ aid }}).addClass("hover");
+      {% else %}
+      {% endif %}   
  {% endif %}
  {% if cateId == 0 %}
     $('#cate').addClass("hover");
@@ -53,13 +52,20 @@ $(document).ready(function() {
 </span></div>
     </div>
     <div class="activityOverflow">
+    
         <ul class="activityAll">
-        {% for item in busi %}
-             {% if date(item.startTime) < date() and  date(item.endTime) > date() %}
-                 <li><img src="{{ asset(item.activityImage) }}" width="470" height="200"><div class="more"><h4>{{ item.businessName }}</h4><a class="moreBtn" href="{{ path('_marketActivity_info',{'id': item.id }) }}" target="_blank">查看详情>></a></div></li>
-            {% endif %}
-         {% endfor %}
-        </ul>
+        {% if busi %}
+            {% for item in pagin %}
+                 {% if date(item.startTime) < date() and  date(item.endTime) > date() %}
+                     <li><a href="{{ path('_marketActivity_info',{'id': item.id }) }}" target="_blank"><img src="{{ asset(item.activityImage) }}" width="470" height="200"></a><div class="more"><h4>{{ item.businessName }}</h4><a class="moreBtn" href="{{ path('_marketActivity_info',{'id': item.id }) }}" target="_blank">查看详情>></a></div></li>
+                {% endif %}
+             {% endfor %}
+          {% else %}
+              <p class="noInfo" align="center">暂无此类商家活动</p>
+          {% endif%}
+          </ul>
+          {{ knp_pagination_render(pagin) }}
+   
         <!--<div class="loading"><img src="{{ asset('other/loading.gif') }}" width="48" height="48"></div>-->
     </div>
 </div>
