--- a/web/css/cpsActivity.css
+++ b/web/css/cpsActivity.css
@@ -74,6 +74,13 @@
 	margin: 20px 0;
 	width:980px;
 }
+
+.cpsActivity .activityOverflow ul.activityAll p.noInfo{
+	color: #999999;
+    font-size: 14px;
+    padding: 20px;
+}
+
 .cpsActivity .activityOverflow ul.activityAll li{
 	float:left;
 	margin:0 20px 20px 0;
