--- a/web/css/default.css
+++ b/web/css/default.css
@@ -78,6 +78,14 @@ header nav#menu ul li:hover{
 header nav#menu ul li.last a{
 	border-right:none;
 }
+header nav#menu ul li span.new{
+	background-image: url("../other/newIcon.gif");
+	height: 9px;
+    position: absolute;
+    right: 17px;
+    top: -2px;
+    width: 22px;
+}
 header nav#menu ul li a{
 	color:#FFF;
 	font-size:16px;
