--- a/src/Jili/ApiBundle/Resources/views/MarketActivity/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/MarketActivity/index.html.twig
@@ -89,7 +89,7 @@ $(document).ready(function() {
               <p class="noInfo" align="center">暂无此类商家活动</p>
           {% endif%}
           </ul>
-          {{ knp_pagination_render(pagin) }}
+          <div style="width: 100%; display: inline-block;">{{ knp_pagination_render(pagin) }}</div>
    
         <!--<div class="loading"><img src="{{ asset('other/loading.gif') }}" width="48" height="48"></div>-->
     </div>
