--- a/src/Jili/ApiBundle/Resources/views/Admin/addAdver.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/addAdver.html.twig
@@ -60,6 +60,12 @@ function ck(){
 <tr class="cpsReward"><td>佣金:</td><td><input type="text" name="intReward" size='10' value=""/>%</td></tr>
 <tr class="cpsReward"><td>返利:</td><td><input type="text" name="rewardRate" size='10' value=""/>%</td></tr>
 
+<tr class="cpsReward"><td>广告分类名:</td><td>
+{% for item in actCategory %}
+<input type="checkbox"  name="type[]" value="{{ item.id }}">{{ item.category }}
+{% endfor %}
+</td></tr>
+
 <tr><td>广告规则:</td><td><textarea id="rule" cols="120" rows="10" name="rule" style="width:700px;height:300px;">{{ rule }}</textarea></td></tr>
 <tr><td>广告图片:(300X250)</td><td>{{ form_widget(form.large) }}</td></tr>
 <tr><td>广告图片:(200X130)</td><td>{{ form_widget(form.small) }}</td></tr>
