--- a/src/Jili/ApiBundle/Resources/views/Advertiserment/shoppinglist.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Advertiserment/shoppinglist.html.twig
@@ -15,6 +15,14 @@
 <script src="{{ asset('js/banner.js')}}" type="text/javascript"></script>
 <script src="{{ asset('js/shopList.js')}}" type="text/javascript"></script>
 <script type="text/javascript">
+$(document).ready(function() {
+    {% if id == 0 %}
+        $('#cate').addClass("hover");
+    {% else %}
+        $('.classify-nav a').removeClass("hover");
+        $('#cate'+{{ id }}).addClass("hover");
+    {% endif %}
+});
 function goto(aid){
 	{% if uid %}
          var w = window.open("","_blank");
@@ -52,21 +60,14 @@ function goto(aid){
 {% include 'JiliApiBundle::header.html.twig' %}
 <div class="webArticle shopList">
   <article>
-    <h2><img src="{{ asset('images/shopTitle.jpg')}}" width="150" height="19"></h2>
-    <ul class="shopRecommend">
-     {% for item in adverRecommand %}
-      <li><a href="{{ path('_advertiserment_index',{'id':item.id}) }}"><img src="{{ asset(item.listImage) }}" width="200" height="130"></a>
-        <p class="about"><span class="store">{{ item.title  }}</span>
-         {% if item.incentiveType==1 %}
-                     <span class="rebate">{{ item.incentive }}米粒</span>
-             {% elseif item.incentiveType==2 %}
-                     <span class="rebate">最高返{{ item.reward_rate/10000 }}%</span>
-             {% else %}
-             {% endif %}
-        </p>
-      </li>
-    {% endfor %}
-    </ul>
+<h2><img src="{{ asset('images/shopTitle.jpg')}}" width="150" height="19"></h2>
+    <div class="classify-nav">
+            <a id="cate" class="hover" href="{{ path('_shopping_list') }}">全部</a>
+            {% for item in cate %}
+             <a href="{{ path('_shopping_list',{'id' : item.id }) }}" id="cate{{ item.id }}">{{ item.category }}</a>
+            {% endfor %}  
+    </div>
+
     <div class="shopRebate">
      {% for item in pagination %}
       <div class="s_box"><img src="{{ asset(item.listImage) }}" width="100" height="65">
@@ -101,11 +102,24 @@ function goto(aid){
    {{ knp_pagination_render(pagination) }}
    </div>
   </article>
-  <aside>
-    <section>
-      <h4><img src="{{ asset('images/adFlowTitle.jpg')}}" width="118" height="18"></h4>
-      <div class="flow"><img src="{{ asset('images/adFlow.jpg')}}" width="187" height="229"></div>
-    </section>
+  <aside style="margin-top:0;">
+    <h2><img src="{{ asset('images/recommedBusiness.jpg')}}"></h2>
+      <section>
+            <ul class="shopRecommend">
+             {% for item in adverRecommand %}
+              <li><a href="{{ path('_advertiserment_index',{'id':item.id}) }}"><img src="{{ asset(item.listImage) }}" width="200" height="130"></a>
+                <p class="about">
+                 {% if item.incentiveType==1 %}
+                             <span class="rebate">{{ item.incentive }}米粒</span>
+                     {% elseif item.incentiveType==2 %}
+                             <span class="rebate">最高返{{ item.reward_rate/10000 }}%</span>
+                     {% else %}
+                 {% endif %}
+                </p>    
+              </li>
+            {% endfor %}
+            </ul>
+      </section>
   </aside>
 </div>
 {% include 'JiliApiBundle::footer.html.twig' %}
