--- a/src/Jili/ApiBundle/Resources/views/Advertiserment/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Advertiserment/info.html.twig
@@ -3,7 +3,11 @@
 <html>
 <head>
 <meta charset="UTF-8" />
-<title>积粒网-体验广告</title>
+{% if advertiserment.incentiveType==2 %}
+  <title>积粒网-购物返利</title>
+{% else %}
+  <title>积粒网-体验广告</title>
+{% endif %}
 {% include 'JiliApiBundle::seo.html.twig' %}
 <!-- [if lt IE9] -->
 <script src="{{ asset('js/html5.js')}}" type="text/javascript"></script>
@@ -74,32 +78,28 @@ function goto(){
                 <span class="getBtn"> <img src="{{ asset('images/endBtn.jpg')}}" /> </span> 
            {% endif %}                        
       {% else %}
-    	      {% if orderStatus %}
-            	      {% if orderStatus==1 %}
-        	          <a href="javascript:void(0);" class="getBtn"  onclick="goto();"><img src="{{ asset('images/continueBtn.jpg')}}" /></a> 
-            	      {% elseif orderStatus==2 %}
-                       <span class="getBtn"><img src="{{ asset('images/oncheckBtn.jpg')}}" />
-                       {% if advertiserment.incentiveType==2 %}
-                             <a onclick="goto();"><img src="{{ asset('images/againBuy.jpg')}}" /></a>
-                        {% endif %} 
-                       </span>  
-                         {% elseif orderStatus==3 %}
-                       <span class="getBtn"><img src="{{ asset('images/finishBtn.jpg')}}" />
-                        {% if advertiserment.incentiveType==2 %}
-                             <a onclick="goto();"><img src="{{ asset('images/againBuy.jpg')}}" /></a>
-                        {% endif %} 
-                       </span>  
-                          {% elseif orderStatus==4 %} 
-                      <span class="getBtn"><img src="{{ asset('images/unpassBtn.jpg')}}" />
-                       {% if advertiserment.incentiveType==2 %}
-                             <a onclick="goto();"><img src="{{ asset('images/againBuy.jpg')}}" /></a>
-                        {% endif %}
-                      </span>  
-                          {% else %}                                                                                               
-        	             {% endif %}
-    	      {% else %}
-    	            <a class="getBtn" id="getTask" onclick="goto();"><img src="{{ asset('images/getBtn.jpg')}}" /></a></span>
-    	     {% endif %}
+          {% if advertiserment.incentiveType==2 %}
+              <a class="getBtn" id="getTask" onclick="goto();"><img src="{{ asset('images/buyBtn.jpg')}}" /></a></span>
+          {% else %}
+              {% if orderStatus %}      
+                  {% if orderStatus==1 %}
+                  <a href="javascript:void(0);" class="getBtn"  onclick="goto();"><img src="{{ asset('images/continueBtn.jpg')}}" /></a> 
+                  {% elseif orderStatus==2 %}
+                     <span class="getBtn"><img src="{{ asset('images/oncheckBtn.jpg')}}" />
+                     </span>  
+                       {% elseif orderStatus==3 %}
+                     <span class="getBtn"><img src="{{ asset('images/finishBtn.jpg')}}" />
+                     </span>  
+                        {% elseif orderStatus==4 %} 
+                    <span class="getBtn"><img src="{{ asset('images/unpassBtn.jpg')}}" />
+                    </span>  
+                        {% else %}                                                                                               
+                     {% endif %}               
+                {% else %}        
+                       <a class="getBtn" id="getTask" onclick="goto();"><img src="{{ asset('images/getBtn.jpg')}}" /></a>
+                     </span>
+               {% endif %}
+          {% endif %}   
       {% endif %}
   </div>
   </div>
