--- a/src/Jili/ApiBundle/Resources/views/Advertiserment/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Advertiserment/info.html.twig
@@ -58,7 +58,7 @@ function goto(){
 		{% if advertiserment.incentiveType==1 %}
 		        {{  advertiserment.incentive }}米粒
 		{% elseif advertiserment.incentiveType==2 %}
-		       最高获消费额{{ advertiserment.reward_rate/10000 }}%
+		       最高获消费额{{ advertiserment.reward_rate }}%
 		{% else %}
 		{% endif %}
 		</p>
