--- a/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
@@ -200,6 +200,20 @@
             href="{{ path('_admin_exchangeIn') }}" 
             target=main>兑换信息导入</A></TD></TR>
 
+             <TR height=20>
+          <TD align=middle width=30><IMG height=9 
+            src="{{ asset('images/admin/menu_icon.gif')}}" width=9></TD>
+          <TD><A class=menuChild 
+            href="{{ path('_admin_exchangeInWen') }}" 
+            target=main>91问问积分列表导入</A></TD></TR>
+
+            <TR height=20>
+          <TD align=middle width=30><IMG height=9 
+            src="{{ asset('images/admin/menu_icon.gif')}}" width=9></TD>
+          <TD><A class=menuChild 
+            href="{{ path('_admin_exchangeCsvWen') }}" 
+            target=main>91问问积分列表导出</A></TD></TR>
+
 
         <TR height=4>
           <TD colSpan=2></TD></TR></TABLE>
@@ -421,6 +435,70 @@
 
               <TR height=4>
           <TD colSpan=2></TD></TR>
+
+       </TABLE>
+
+
+       <TABLE cellSpacing=0 cellPadding=0 width=150 border=0>
+        <TR height=22>
+          <TD style="PADDING-LEFT: 30px" background="{{ asset('images/admin/menu_bt.jpg')}}"><A 
+            class=menuParent onclick=expand(13) 
+            href="javascript:void(0);">名片录力管理</A></TD></TR>
+        <TR height=4>
+          <TD></TD></TR></TABLE>
+      <TABLE id=child13 style="DISPLAY: none" cellSpacing=0 cellPadding=0 
+      width=150 border=0>
+
+      <TR height=20>
+          <TD align=middle width=30><IMG height=9 
+            src="{{ asset('images/admin/menu_icon.gif')}}" width=9></TD>
+          <TD><A class=menuChild 
+            href="{{ path('_admin_downCardList') }}" 
+            target=main>下载csv文件</A></TD></TR>   
+              <TR height=4>
+          <TD colSpan=2></TD></TR>
+
+        <TR height=20>
+          <TD align=middle width=30><IMG height=9 
+            src="{{ asset('images/admin/menu_icon.gif')}}" width=9></TD>
+          <TD><A class=menuChild 
+            href="{{ path('_admin_awsCsvList') }}" 
+            target=main>csv文件列表</A></TD></TR>   
+
+              <TR height=4>
+          <TD colSpan=2></TD></TR>
+
+      
+           <TR height=20>
+          <TD align=middle width=30><IMG height=9 
+            src="{{ asset('images/admin/menu_icon.gif')}}" width=9></TD>
+          <TD><A class=menuChild 
+            href="{{ path('_admin_awsDayCsc') }}" 
+            target=main>获取名片列表</A></TD></TR>   
+
+              <TR height=4>
+          <TD colSpan=2></TD></TR>
+
+          <TR height=20>
+          <TD align=middle width=30><IMG height=9 
+            src="{{ asset('images/admin/menu_icon.gif')}}" width=9></TD>
+          <TD><A class=menuChild 
+            href="{{ path('_admin_giveCardPoint') }}" 
+            target=main>发放名片积分</A></TD></TR>   
+
+              <TR height=4>
+          <TD colSpan=2></TD></TR>
+
+          <TR height=20>
+          <TD align=middle width=30><IMG height=9 
+            src="{{ asset('images/admin/menu_icon.gif')}}" width=9></TD>
+          <TD><A class=menuChild 
+            href="{{ path('_admin_cardInfo') }}" 
+            target=main>查看用户名片积分</A></TD></TR>   
+
+              <TR height=4>
+          <TD colSpan=2></TD></TR>
+
 
        </TABLE>
          
