--- a/src/Jili/ApiBundle/Resources/views/Admin/exchangeIn.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/exchangeIn.html.twig
@@ -9,10 +9,21 @@
 <form action="{{ path('_admin_exchangeIn') }}" method="post" id="form1" enctype="multipart/form-data" >
 <table align='center'>
 <tr><td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr><td>csv文件:<input type="file" name="csv" /></td><td><input type="submit" name="add" value="提 交"/></td></tr>
+<tr><td>csv导入:
+<select name="exchangeType" id="exchangeType">
+  {% for item in exchangeType %}
+   <option value="{{ item.id }}" {% if item.id == exType %} selected = "selected" {% endif %}>{{ item.type }}</option>
+  {% endfor %}
+</select>
+<input type="file" name="csv" /></td><td><input type="submit" name="add" value="提 交"/></td></tr>
+
 {% if success %}
 {% if success == 1 %}
- <center><font color='red'>数据插入成功 </font></center>
+ <center><font color='red'>数据插入成功</font></center>
+ {% elseif success == 2 %}
+  <center><font color='red'>请上传csv文件</font></center>
+  {% elseif success == 3 %}
+  <center><font color='red'>csv文件格式不对</font></center>
  {% endif %}
 {% endif %}
 </table>
