--- a/src/Jili/ApiBundle/Resources/views/Admin/exchangeInfo.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/exchangeInfo.html.twig
@@ -8,34 +8,70 @@
 <SCRIPT src="{{ asset('js/load.js')}}" type=text/javascript></SCRIPT>
 <script src="{{ asset('js/My97DatePicker/WdatePicker.js')}}" type="text/javascript"></script>
 <script src="{{ asset('js/kindeditor/kindeditor.js')}}" type="text/javascript"></script>
+<script type="text/javascript">
+$(document).ready(function(){
+  {% if exType == 0 %}
+    $('#add').attr('disabled', 'disabled');
+  {% endif %}
+  $("#select").click(function (){
+      window.location.href="{{ path('_admin_exchangeInfo') }}?start="+$('#start').val()+"&end="+$('#end').val()+"&exType="+$('#exchangeType').val();
+  })
+});
+</script>
 </HEAD>
 <BODY>
-<form action="{{ path('_admin_exchangeInfo') }}" method="post" id="form1"}} >
+<form action="{{ path('_admin_exchangeInfo')}}" method="post" id="form1"}} >
 <table align="center" width="1024">
 <tr><td colspan="7">&nbsp;</td></tr>
 <tr><td colspan="7">&nbsp;</td></tr>
-<tr><td colspan="7" align="center">兑换开始时间:<input name="start_time" value="{{ start }}" size="26" maxlength="60" readonly="readonly" onClick="WdatePicker()"  class="Wdate" style="cursor:pointer"/>
-&nbsp;兑换结束时间:<input name="end_time" value="{{ end }}" size="26" maxlength="60" readonly="readonly" onClick="WdatePicker()"  class="Wdate" style="cursor:pointer"/>&nbsp;<input type="submit" name="select" value="查 询"/>&nbsp;<input type="submit" name="add" value="导出兑换数据"/>&nbsp;(时间不选为全部导出)</td></tr>
+<tr><td colspan="7" align="center">兑换开始时间:<input id="start" name="start_time" value="{% if start %}{{ start }}{% endif %}" size="18" maxlength="60" readonly="readonly" onClick="WdatePicker()"  class="Wdate" style="cursor:pointer"/>
+&nbsp;兑换结束时间:<input name="end_time" id="end" value="{% if end %}{{ end }}{% endif %}" size="18" maxlength="60" readonly="readonly" onClick="WdatePicker()"  class="Wdate" style="cursor:pointer"/>&nbsp;
+<select name="exchangeType" id="exchangeType">
+  <option value="0">全部</option>
+  {% for item in exchangeType %}
+   <option value="{{ item.id }}"  {% if item.id == exType %} selected = "selected" {% endif %}>{{ item.type }}</option>
+  {% endfor %}
+</select>
+<type type="hidden" id="hided" />
+<input type="button" id="select" name="select" value="查 询"/>&nbsp;<input type="submit" id="add" name="add" value="导出兑换数据"/></td></tr>
 <tr><td colspan="7">&nbsp;</td></tr>
     	<tr>
         	<th>兑换账号</th>
-        	<th>91问问账号</th>
+        	<th>对方账号</th>
             <th>兑换时间</th>
             <th>兑换米粒</th>
+            <th>兑换物品</th>
             <th>兑换类型</th>
             <th>兑换状态</th>
-            <th>兑换完成时间</th>
+            <th>完成时间</th>
+            <th>身份证嫌疑</th>
+            <th>ip嫌疑</th>
+            <th>手机号码嫌疑</th>
         </tr>
         {% if pagination %}
          {% for item in pagination %}
         <tr>
           <td align="center">{{ item.email }}</td>
-          <td align="center">{{ item.wenwenUser }}</td>
+          <td align="center">{{ item.targetAccount }}</td>
           <td align="center">{{ item.exchangeDate.date | date('Y-m-d') }}</td>
           <td align="center">{{ item.targetPoint }} </td>
+            {% if item.exType == 1 %}
+                 <td align="center">{{ item.targetPoint }}问问积分</td>
+            {% elseif item.exType == 2 %}
+                 <td align="center">{{ item.exchangeItemNumber }}张亚马逊礼品卡</td>
+            {% elseif item.exType == 3 %}
+                 <td align="center">{{ item.exchangeItemNumber }}元支付宝</td>
+            {% elseif item.exType == 4 %}
+                 <td align="center">{{ item.exchangeItemNumber }}元手机话费</td>
+           {% else %}
+            {% endif %}
+
            <td align="center">{{ item.type }}</td>
            <td align="center">{% if item.status==1 %}兑换成功{% elseif  item.status==2 %}兑换失败{% else %}审核中{% endif %}</td>
            <td align="center">{% if item.finishDate %}{{ item.finishDate.date | date('Y-m-d') }}{% endif %}</td>
+           <td align="center">{{ item.ident }}</td>
+           <td align="center">{{ item.ip }}</td>
+           <td align="center">{{ item.mobile }}</td>
         </tr>
          {% endfor %}
          {%  endif %}
