--- a/src/Jili/ApiBundle/Resources/views/Exchange/finish.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/finish.html.twig
@@ -20,16 +20,16 @@
     {% include 'JiliApiBundle:User:rightInfo.html.twig' %}
   </aside>
   <article>
-    <div class="wenwen">
-      <div class="finish">
-   	    <div class="img"><img width="108" height="82" src="{{ asset('images/regFinish.jpg')}}"></div>
-        <h2><img src="{{ asset('images/messageExchange.gif')}}" alt="我们已经收到您的兑换申请！"></h2>
-        <p>兑换将在下一个工作日（遇节假日顺延）完成，请关注您的兑换状态邮件通知。</p>
-        <hr />
-        <p>※ 如您的信息有误造成兑换失败，米粒将会自动返还到您的账户。</p>
-        <p><a href="{{ path('_default_index') }}">返回首页</a></p>
-      </div>
-    </div>
+    {% if type == 'jili' %}
+      {% include 'JiliApiBundle:Exchange:jiliFinish.html.twig' %}
+    {% elseif type =='amazon' %}
+      {% include 'JiliApiBundle:Exchange:amazonFinish.html.twig' %}
+    {% elseif type=='alipay' %}
+      {% include 'JiliApiBundle:Exchange:alipayFinish.html.twig' %}
+    {% elseif type=='mobile' %}
+      {% include 'JiliApiBundle:Exchange:mobileFinish.html.twig' %}
+    {% else %}
+    {% endif %}
   </article>
 </div>
 {% include 'JiliApiBundle::footer.html.twig' %}
